--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
 
   server {
     listen 80;
-    server_name embreddit.com;
+    server_name embreddit.com *.embreddit.com;
     access_log logs/embreddit.log main;
 
     location / {
